--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI1MTI1MiwianRpIjoiMTMzYTVlYjgtOTY4MS00MTU5LTlkMzMtM2Y4Y2ViYjdiOTNiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjUxMjUyLCJleHAiOjE2NjAyNTQ4NTJ9.KH5CQCD9S9-NB555PobFMBl9nqxx6FuC7_Jv2vBdGGs\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI1MTc1OSwianRpIjoiZDMyNTU3NzgtY2I5Yi00NGU4LTg2ZTgtYjc2NzNjYTIwNTM2IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjUxNzU5LCJleHAiOjE2NjAyNTUzNTl9._JiY5U4QJ7hHQXmMYkpGEQR4Izea_WqQ5FSvei68XiQ\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI1MTI1MiwianRpIjoiMTMzYTVlYjgtOTY4MS00MTU5LTlkMzMtM2Y4Y2ViYjdiOTNiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjUxMjUyLCJleHAiOjE2NjAyNTQ4NTJ9.KH5CQCD9S9-NB555PobFMBl9nqxx6FuC7_Jv2vBdGGs'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI1MTc1OSwianRpIjoiZDMyNTU3NzgtY2I5Yi00NGU4LTg2ZTgtYjc2NzNjYTIwNTM2IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjUxNzU5LCJleHAiOjE2NjAyNTUzNTl9._JiY5U4QJ7hHQXmMYkpGEQR4Izea_WqQ5FSvei68XiQ'}\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -197,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'project_names': ['project_1']}\n"
+      "{'project_names': ['project_2']}\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -312,15 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intent_1/8': {}}\n",
-      "['intent_1/8']\n"
+      "{'intent_1': {}}\n",
+      "['intent_1']\n"
      ]
     }
    ],
@@ -336,14 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'examples': ['string_1'], 'use_entities': ['entity_1', 'entity_2']}\n"
+      "{}\n"
      ]
     }
    ],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -398,14 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Error message': 'intent_2 does not exist'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -467,15 +467,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'action_1/8': {'action_type': 'response'}}\n",
-      "['action_1/8']\n"
+      "{'action_1': {'action_type': 'response'}}\n",
+      "['action_1']\n"
      ]
     }
    ],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [
     {
@@ -722,14 +722,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'Error message': 'entity_1 already exists'}\n"
      ]
     }
    ],
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 381,
    "metadata": {},
    "outputs": [
     {
@@ -898,15 +898,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'story_1': {}}\n",
-      "['story_1']\n"
+      "{'story_1 測試': {}}\n",
+      "['story_1 測試']\n"
      ]
     }
    ],
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -1470,14 +1470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'Error message': '測試 already exists'}\n"
      ]
     }
    ],
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -1649,6 +1649,25 @@
    "metadata": {},
    "source": [
     "# temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "b=2\n",
+    "print(a or b)"
    ]
   }
  ],
