--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI1MTc1OSwianRpIjoiZDMyNTU3NzgtY2I5Yi00NGU4LTg2ZTgtYjc2NzNjYTIwNTM2IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjUxNzU5LCJleHAiOjE2NjAyNTUzNTl9._JiY5U4QJ7hHQXmMYkpGEQR4Izea_WqQ5FSvei68XiQ\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI5MzE3MSwianRpIjoiZDBiN2E1NDgtOGZkNy00MmEzLWJhMDUtNzM0MDVjZDYyYzFkIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjkzMTcxLCJleHAiOjE2NjAyOTY3NzF9.-wKpq2cEznppcX5b2GF-Iu0IIOO7PsztoHDsEr-aHsE\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI1MTc1OSwianRpIjoiZDMyNTU3NzgtY2I5Yi00NGU4LTg2ZTgtYjc2NzNjYTIwNTM2IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjUxNzU5LCJleHAiOjE2NjAyNTUzNTl9._JiY5U4QJ7hHQXmMYkpGEQR4Izea_WqQ5FSvei68XiQ'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI5MzE3MSwianRpIjoiZDBiN2E1NDgtOGZkNy00MmEzLWJhMDUtNzM0MDVjZDYyYzFkIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjkzMTcxLCJleHAiOjE2NjAyOTY3NzF9.-wKpq2cEznppcX5b2GF-Iu0IIOO7PsztoHDsEr-aHsE'}\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -197,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'project_names': ['project_2']}\n"
+      "{'project_names': ['project_1']}\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -722,14 +722,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Error message': 'entity_1 already exists'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -898,15 +898,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'story_1 測試': {}}\n",
-      "['story_1 測試']\n"
+      "{'story_1': {}}\n",
+      "['story_1']\n"
      ]
     }
    ],
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1470,14 +1470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Error message': '測試 already exists'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
