--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI5MzE3MSwianRpIjoiZDBiN2E1NDgtOGZkNy00MmEzLWJhMDUtNzM0MDVjZDYyYzFkIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjkzMTcxLCJleHAiOjE2NjAyOTY3NzF9.-wKpq2cEznppcX5b2GF-Iu0IIOO7PsztoHDsEr-aHsE\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDMzOTA5NywianRpIjoiNDA4MTllYmYtN2Y4Ni00YmQ1LWIwODQtMDFlYTgwZDJjNWUyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMzM5MDk3LCJleHAiOjE2NjAzNDI2OTd9._puX_jUUBfValqgoW8t_sIbQ4-v0GV1dVuudxqx0lZ0\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDI5MzE3MSwianRpIjoiZDBiN2E1NDgtOGZkNy00MmEzLWJhMDUtNzM0MDVjZDYyYzFkIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMjkzMTcxLCJleHAiOjE2NjAyOTY3NzF9.-wKpq2cEznppcX5b2GF-Iu0IIOO7PsztoHDsEr-aHsE'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDMzOTA5NywianRpIjoiNDA4MTllYmYtN2Y4Ni00YmQ1LWIwODQtMDFlYTgwZDJjNWUyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMzM5MDk3LCJleHAiOjE2NjAzNDI2OTd9._puX_jUUBfValqgoW8t_sIbQ4-v0GV1dVuudxqx0lZ0'}\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -864,6 +864,188 @@
    "source": [
     "\"\"\"delete an intent\"\"\"\n",
     "r_delete = requests.delete(url=f'{BASE_URL}/projects/project_1/entities/entity_1',\n",
+    "                           cookies=cookies)\n",
+    "print(r_delete.json())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Slot API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"create a slot\"\"\"\n",
+    "content = {\n",
+    "    'name': 'slot_1',\n",
+    "    \"content\": {\n",
+    "        'type': 'any',\n",
+    "        'mappings': [\n",
+    "            {'type': 'custom'}\n",
+    "        ]\n",
+    "    }\n",
+    "}\n",
+    "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/slots',\n",
+    "                       cookies=cookies,\n",
+    "                       json=content)\n",
+    "print(r_post.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'slot_1': {'type': 'any', 'mappings': [{'type': 'custom'}]}}\n",
+      "['slot_1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get slot\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/slots',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/slots?mode=name',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'any', 'mappings': [{'type': 'custom'}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get a slot\"\"\"\n",
+    "r_get = requests.get(url=f'{BASE_URL}/projects/project_1/slots/slot_1',\n",
+    "                     cookies=cookies)\n",
+    "print(r_get.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update a slot\"\"\"\n",
+    "content = {\n",
+    "    \"content\": {\n",
+    "        'type': 'text',\n",
+    "        'mappings': [\n",
+    "            {'type': 'custom'}\n",
+    "        ]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/slots/slot_1',\n",
+    "                     cookies=cookies,\n",
+    "                     json=content)\n",
+    "print(r_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"update & rename a slot\"\"\"\n",
+    "content = {\n",
+    "    'new_name': 'slot_2',\n",
+    "    \"content\": {\n",
+    "        'type': 'any',\n",
+    "        'mappings': [\n",
+    "            {'type': 'custom'}\n",
+    "        ]\n",
+    "    }\n",
+    "}\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/slots/slot_1',\n",
+    "                     cookies=cookies,\n",
+    "                     json=content)\n",
+    "print(r_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"rename a slot\"\"\"\n",
+    "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/slots/slot_2',\n",
+    "                     cookies=cookies,\n",
+    "                     json={'new_name': 'slot_1'})\n",
+    "print(r_put.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'msg': 'OK'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"delete a slot\"\"\"\n",
+    "r_delete = requests.delete(url=f'{BASE_URL}/projects/project_1/slots/slot_1',\n",
     "                           cookies=cookies)\n",
     "print(r_delete.json())\n"
    ]
