--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDMzOTA5NywianRpIjoiNDA4MTllYmYtN2Y4Ni00YmQ1LWIwODQtMDFlYTgwZDJjNWUyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMzM5MDk3LCJleHAiOjE2NjAzNDI2OTd9._puX_jUUBfValqgoW8t_sIbQ4-v0GV1dVuudxqx0lZ0\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDM0NDIwMCwianRpIjoiZDUwMzdjM2QtMmEyNi00MDc0LTkwMmEtNzY4OWRmMDJiMzZhIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMzQ0MjAwLCJleHAiOjE2NjAzNDc4MDB9.u-zCsnWsw1gVEe4oWUMKK7Y_NWTSPJniUhAL37b85dM\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDMzOTA5NywianRpIjoiNDA4MTllYmYtN2Y4Ni00YmQ1LWIwODQtMDFlYTgwZDJjNWUyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMzM5MDk3LCJleHAiOjE2NjAzNDI2OTd9._puX_jUUBfValqgoW8t_sIbQ4-v0GV1dVuudxqx0lZ0'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDM0NDIwMCwianRpIjoiZDUwMzdjM2QtMmEyNi00MDc0LTkwMmEtNzY4OWRmMDJiMzZhIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMzQ0MjAwLCJleHAiOjE2NjAzNDc4MDB9.u-zCsnWsw1gVEe4oWUMKK7Y_NWTSPJniUhAL37b85dM'}\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -371,13 +371,13 @@
     "\"\"\"update intent\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/intents/intent_1',\n",
     "                     cookies=cookies,\n",
-    "                     json={\"content\":{'examples': ['string_1'], 'use_entities': ['entity_1', 'entity_2']}})\n",
+    "                     json={\"content\": {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1', 'entity_2']}})\n",
     "print(r_put.json())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -392,13 +392,13 @@
     "\"\"\"update & rename an intent\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/intents/intent_1',\n",
     "                     cookies=cookies,\n",
-    "                     json={'new_name': 'intent_2', \"content\":{'examples': ['string_1', 'string_2']}})\n",
+    "                     json={'new_name': 'intent_2', \"content\": {'examples': [{'text': 'string_1'}, {'text': 'string_2'}]}})\n",
     "print(r_put.json())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
