--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDM0NDIwMCwianRpIjoiZDUwMzdjM2QtMmEyNi00MDc0LTkwMmEtNzY4OWRmMDJiMzZhIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMzQ0MjAwLCJleHAiOjE2NjAzNDc4MDB9.u-zCsnWsw1gVEe4oWUMKK7Y_NWTSPJniUhAL37b85dM\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDUxNzIwMiwianRpIjoiM2NkNTAwODQtZmU1My00ZDJhLTk0ZmMtMDc4OTlhY2VmZjE3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNTE3MjAyLCJleHAiOjE2NjA1MjA4MDJ9.CYI_qYKgse3JE60UJBbEVAIr6KVdcKnuA-8x_3DpTGU\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDM0NDIwMCwianRpIjoiZDUwMzdjM2QtMmEyNi00MDc0LTkwMmEtNzY4OWRmMDJiMzZhIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMzQ0MjAwLCJleHAiOjE2NjAzNDc4MDB9.u-zCsnWsw1gVEe4oWUMKK7Y_NWTSPJniUhAL37b85dM'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDUxNzIwMiwianRpIjoiM2NkNTAwODQtZmU1My00ZDJhLTk0ZmMtMDc4OTlhY2VmZjE3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNTE3MjAyLCJleHAiOjE2NjA1MjA4MDJ9.CYI_qYKgse3JE60UJBbEVAIr6KVdcKnuA-8x_3DpTGU'}\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,20 +306,20 @@
     "\"\"\"create an intent\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/intents',\n",
     "                       cookies=cookies,\n",
-    "                       json={'name': 'intent_1'})\n",
+    "                       json={'name': 'intent_1', \"content\": {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1', 'entity_2']}})\n",
     "print(r_post.json())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intent_1': {}}\n",
+      "{'intent_1': {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1', 'entity_2']}}\n",
       "['intent_1']\n"
      ]
     }
@@ -336,14 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n"
+      "{'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1', 'entity_2']}\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
     "\"\"\"update intent\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/intents/intent_1',\n",
     "                     cookies=cookies,\n",
-    "                     json={\"content\": {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1', 'entity_2']}})\n",
+    "                     json={\"content\": {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1']}})\n",
     "print(r_put.json())\n"
    ]
   },
