--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "\"\"\"josn test\"\"\"\n",
+    "\"\"\"json test\"\"\"\n",
     "\n",
     "r_get = requests.get(url=f'{BASE_URL}/json')\n",
     "print(r_get.json())\n"
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDUxNzIwMiwianRpIjoiM2NkNTAwODQtZmU1My00ZDJhLTk0ZmMtMDc4OTlhY2VmZjE3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNTE3MjAyLCJleHAiOjE2NjA1MjA4MDJ9.CYI_qYKgse3JE60UJBbEVAIr6KVdcKnuA-8x_3DpTGU\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDUyMDk1OCwianRpIjoiOGVmNzRlNjctYmIwYy00NWI4LWIxMGMtN2NlNDU3MWU2MDQ3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNTIwOTU4LCJleHAiOjE2NjA1MjQ1NTh9.cF7MCq8VGGVcw7FYHqglCU0dgYHrgGujh0EQGE16ypE\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDUxNzIwMiwianRpIjoiM2NkNTAwODQtZmU1My00ZDJhLTk0ZmMtMDc4OTlhY2VmZjE3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNTE3MjAyLCJleHAiOjE2NjA1MjA4MDJ9.CYI_qYKgse3JE60UJBbEVAIr6KVdcKnuA-8x_3DpTGU'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDUyMDk1OCwianRpIjoiOGVmNzRlNjctYmIwYy00NWI4LWIxMGMtN2NlNDU3MWU2MDQ3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNTIwOTU4LCJleHAiOjE2NjA1MjQ1NTh9.cF7MCq8VGGVcw7FYHqglCU0dgYHrgGujh0EQGE16ypE'}\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -446,13 +446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'msg': 'OK'}\n",
       "{'msg': 'OK'}\n"
      ]
     }
@@ -461,7 +462,7 @@
     "\"\"\"create an action\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/actions',\n",
     "                       cookies=cookies,\n",
-    "                       json={'name': 'action_1', \"content\":{'action_type': 'response'}})\n",
+    "                       json={'name': 'action_1', \"content\": {'action_type': 'response', \"data\": []}})\n",
     "print(r_post.json())\n"
    ]
   },
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
