--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDUyMDk1OCwianRpIjoiOGVmNzRlNjctYmIwYy00NWI4LWIxMGMtN2NlNDU3MWU2MDQ3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNTIwOTU4LCJleHAiOjE2NjA1MjQ1NTh9.cF7MCq8VGGVcw7FYHqglCU0dgYHrgGujh0EQGE16ypE\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDUyOTgxMSwianRpIjoiNmZjZDFiZGYtZTQzNS00MzdhLWFkMWQtNTM4NWUxNjgyNzg3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNTI5ODExLCJleHAiOjE2NjA1MzM0MTF9.DFI3cClBcktAJR_0FLSYq1inwFe0BXI2rlA2GWdAdsM\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDUyMDk1OCwianRpIjoiOGVmNzRlNjctYmIwYy00NWI4LWIxMGMtN2NlNDU3MWU2MDQ3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNTIwOTU4LCJleHAiOjE2NjA1MjQ1NTh9.cF7MCq8VGGVcw7FYHqglCU0dgYHrgGujh0EQGE16ypE'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDUyOTgxMSwianRpIjoiNmZjZDFiZGYtZTQzNS00MzdhLWFkMWQtNTM4NWUxNjgyNzg3IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNTI5ODExLCJleHAiOjE2NjA1MzM0MTF9.DFI3cClBcktAJR_0FLSYq1inwFe0BXI2rlA2GWdAdsM'}\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -306,21 +306,21 @@
     "\"\"\"create an intent\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/intents',\n",
     "                       cookies=cookies,\n",
-    "                       json={'name': 'intent_1', \"content\": {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1', 'entity_2']}})\n",
+    "                       json={'name': 'intent_1'})\n",
     "print(r_post.json())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intent_1': {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1', 'entity_2']}}\n",
-      "['intent_1']\n"
+      "{'intent_1': {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1']}, 'intent_2': {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1']}, 'intent_3': {'examples': [{'text': 'default'}]}}\n",
+      "['intent_1', 'intent_2', 'intent_3']\n"
      ]
     }
    ],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
     "\"\"\"update intent\"\"\"\n",
     "r_put = requests.put(url=f'{BASE_URL}/projects/project_1/intents/intent_1',\n",
     "                     cookies=cookies,\n",
-    "                     json={\"content\": {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1']}})\n",
+    "                     json={\"content\": {'examples': [{'text': 'string_1'}], 'use_entities': ['entity_1', 'entity_2']}})\n",
     "print(r_put.json())\n"
    ]
   },
@@ -446,14 +446,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n",
       "{'msg': 'OK'}\n"
      ]
     }
@@ -462,21 +461,21 @@
     "\"\"\"create an action\"\"\"\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/actions',\n",
     "                       cookies=cookies,\n",
-    "                       json={'name': 'action_1', \"content\": {'action_type': 'response', \"data\": []}})\n",
+    "                       json={'name': 'action_1'})\n",
     "print(r_post.json())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'action_1': {'action_type': 'response'}}\n",
-      "['action_1']\n"
+      "{'action_1': {'action_type': 'response', 'data': [{'text': 'text_1'}]}, 'action_2': {'action_type': 'response', 'data': [{'text': 'text_1'}, {'text': 'text_2'}]}, 'action_3': {'action_type': 'response', 'data': [{'text': 'default'}]}}\n",
+      "['action_1', 'action_2', 'action_3']\n"
      ]
     }
    ],
@@ -512,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -830,14 +829,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'Error message': 'entity_2 does not exist'}\n"
      ]
     }
    ],
@@ -878,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -891,15 +890,7 @@
    ],
    "source": [
     "\"\"\"create a slot\"\"\"\n",
-    "content = {\n",
-    "    'name': 'slot_1',\n",
-    "    \"content\": {\n",
-    "        'type': 'any',\n",
-    "        'mappings': [\n",
-    "            {'type': 'custom'}\n",
-    "        ]\n",
-    "    }\n",
-    "}\n",
+    "content = {'name': 'slot_1'}\n",
     "r_post = requests.post(url=f'{BASE_URL}/projects/project_1/slots',\n",
     "                       cookies=cookies,\n",
     "                       json=content)\n",
@@ -908,14 +899,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'slot_1': {'type': 'any', 'mappings': [{'type': 'custom'}]}}\n",
+      "{'slot_1': {'type': 'any'}}\n",
       "['slot_1']\n"
      ]
     }
@@ -932,14 +923,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'type': 'any', 'mappings': [{'type': 'custom'}]}\n"
+      "{'type': 'any'}\n"
      ]
     }
    ],
@@ -952,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1832,6 +1823,42 @@
    "metadata": {},
    "source": [
     "# temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'examples': [{'text': 'default'}]}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# from typing import Optional, List\n",
+    "\n",
+    "# from pydantic import BaseModel, validator, root_validator, conlist\n",
+    "\n",
+    "\n",
+    "# class IntentExampleSchema(BaseModel):\n",
+    "#     text: Optional[str]\n",
+    "#     metadata: Optional[dict]\n",
+    "\n",
+    "\n",
+    "# class IntentObjectSchema(BaseModel):\n",
+    "#     examples: conlist(IntentExampleSchema, min_items=1)\n",
+    "#     use_entities: Optional[List[str]]\n",
+    "#     ignore_entities: Optional[List[str]]\n",
+    "\n",
+    "\n",
+    "# IntentObjectSchema.parse_obj({'examples':[{'text':'default'}]}).dict(exclude_unset=True)\n"
    ]
   }
  ],
