--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDYyNjE3OSwianRpIjoiMjZkOGFmOGQtNmY1Ny00MWQ2LTg2YWItY2RlNjAwMTI5ZDFjIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNjI2MTc5LCJleHAiOjE2NjA2Mjk3Nzl9.xViNoit1heOnteMB1jmoBcCFQerAwSBMPVHHc5jgj4Q\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDc4Njk3MywianRpIjoiZDhjMzJjM2EtZTNiMC00ZGNkLWFhY2UtMjc3YjQ1NjA1Mzg5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNzg2OTczLCJleHAiOjE2NjA4MzAxNzN9.krn_SLlgYp8oiA0QaKaCybCaMifbrMzhw5vOys0EH0g\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDYyNjE3OSwianRpIjoiMjZkOGFmOGQtNmY1Ny00MWQ2LTg2YWItY2RlNjAwMTI5ZDFjIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNjI2MTc5LCJleHAiOjE2NjA2Mjk3Nzl9.xViNoit1heOnteMB1jmoBcCFQerAwSBMPVHHc5jgj4Q'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDc4Njk3MywianRpIjoiZDhjMzJjM2EtZTNiMC00ZGNkLWFhY2UtMjc3YjQ1NjA1Mzg5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNzg2OTczLCJleHAiOjE2NjA4MzAxNzN9.krn_SLlgYp8oiA0QaKaCybCaMifbrMzhw5vOys0EH0g'}\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1674,14 +1674,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'token': '台積電', 'start': 0, 'end': 3}, {'token': '在', 'start': 3, 'end': 4}, {'token': '美國', 'start': 4, 'end': 6}, {'token': '《', 'start': 6, 'end': 7}, {'token': '財富', 'start': 7, 'end': 9}, {'token': '》', 'start': 9, 'end': 10}, {'token': '雜誌', 'start': 10, 'end': 12}, {'token': '評選', 'start': 12, 'end': 14}, {'token': '「', 'start': 14, 'end': 15}, {'token': '全球', 'start': 15, 'end': 17}, {'token': '最大', 'start': 17, 'end': 19}, {'token': '500', 'start': 19, 'end': 22}, {'token': '家', 'start': 22, 'end': 23}, {'token': '公司', 'start': 23, 'end': 25}, {'token': '」', 'start': 25, 'end': 26}, {'token': '排行榜', 'start': 26, 'end': 29}, {'token': '中', 'start': 29, 'end': 30}, {'token': '，', 'start': 30, 'end': 31}, {'token': '依營', 'start': 31, 'end': 33}, {'token': '收規模', 'start': 33, 'end': 36}, {'token': '名列', 'start': 36, 'end': 38}, {'token': '全球', 'start': 38, 'end': 40}, {'token': '第', 'start': 40, 'end': 41}, {'token': '251', 'start': 41, 'end': 44}, {'token': '名', 'start': 44, 'end': 45}, {'token': '。', 'start': 45, 'end': 46}]\n"
+      "[{'token': '台積', 'start': 0, 'end': 2}, {'token': '電在', 'start': 2, 'end': 4}, {'token': '美國', 'start': 4, 'end': 6}, {'token': '《', 'start': 6, 'end': 7}, {'token': '財富', 'start': 7, 'end': 9}, {'token': '》', 'start': 9, 'end': 10}, {'token': '雜誌', 'start': 10, 'end': 12}, {'token': '評選', 'start': 12, 'end': 14}, {'token': '「', 'start': 14, 'end': 15}, {'token': '全球', 'start': 15, 'end': 17}, {'token': '最大', 'start': 17, 'end': 19}, {'token': '500', 'start': 19, 'end': 22}, {'token': '家', 'start': 22, 'end': 23}, {'token': '公司', 'start': 23, 'end': 25}, {'token': '」', 'start': 25, 'end': 26}, {'token': '排行榜', 'start': 26, 'end': 29}, {'token': '中', 'start': 29, 'end': 30}, {'token': '，', 'start': 30, 'end': 31}, {'token': '依營', 'start': 31, 'end': 33}, {'token': '收規模', 'start': 33, 'end': 36}, {'token': '名列', 'start': 36, 'end': 38}, {'token': '全球', 'start': 38, 'end': 40}, {'token': '第', 'start': 40, 'end': 41}, {'token': '251', 'start': 41, 'end': 44}, {'token': '名', 'start': 44, 'end': 45}, {'token': '。', 'start': 45, 'end': 46}]\n"
      ]
     }
    ],
