--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDc4Njk3MywianRpIjoiZDhjMzJjM2EtZTNiMC00ZGNkLWFhY2UtMjc3YjQ1NjA1Mzg5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNzg2OTczLCJleHAiOjE2NjA4MzAxNzN9.krn_SLlgYp8oiA0QaKaCybCaMifbrMzhw5vOys0EH0g\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDg5MDUwMiwianRpIjoiYmYzMTM0ZGMtOTgyNC00MGY1LWI1YzAtOWFiMDI4ZTZhMWNiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwODkwNTAyLCJleHAiOjE2NjA5MzM3MDJ9.YrxgIRWiKH2xd_71fOrwulfksVNUH11AvqruyXN2M7g\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDc4Njk3MywianRpIjoiZDhjMzJjM2EtZTNiMC00ZGNkLWFhY2UtMjc3YjQ1NjA1Mzg5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwNzg2OTczLCJleHAiOjE2NjA4MzAxNzN9.krn_SLlgYp8oiA0QaKaCybCaMifbrMzhw5vOys0EH0g'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDg5MDUwMiwianRpIjoiYmYzMTM0ZGMtOTgyNC00MGY1LWI1YzAtOWFiMDI4ZTZhMWNiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwODkwNTAyLCJleHAiOjE2NjA5MzM3MDJ9.YrxgIRWiKH2xd_71fOrwulfksVNUH11AvqruyXN2M7g'}\n"
      ]
     }
    ],
@@ -1859,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1867,8 +1867,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"msg\": \"rasa api server\",\n",
-      "  \"rasa_status_code\": 204\n",
+      "  \"rasa_status_code\": 200\n",
       "}\n",
       "\n"
      ]
@@ -1883,14 +1882,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'rasa api server', 'rasa_status_code': 204}\n"
+      "{'Error message': \"HTTPConnectionPool(host='localhost', port=5005): Max retries exceeded with url: /model (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x000002152AEE59F0>: Failed to establish a new connection: [WinError 10061] 無法連線，因為目標電腦拒絕連線。'))\"}\n"
      ]
     }
    ],
@@ -1937,26 +1936,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import json\n",
+    "\n",
+    "# url = 'http://localhost:5005/webhooks/rest/webhook'\n",
+    "# data = {'sender': 'test_user', 'message' : 'Hi!'}\n",
+    "\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     response = requests.post(url, data = json.dumps(data))\n",
+    "#     print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intents = {\n",
+    "    \"tsmc\": {\n",
+    "        \"examples\": [\n",
+    "            {\n",
+    "                \"text\": \"台積電在美國《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第251名\",\n",
+    "                \"labels\": [\n",
+    "                    {\n",
+    "                        \"token\": \"美國\",\n",
+    "                        \"start\": 4,\n",
+    "                        \"end\": 6,\n",
+    "                        \"entity\": \"country\"\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"token\": \"台積電\",\n",
+    "                        \"start\": 0,\n",
+    "                        \"end\": 3,\n",
+    "                        \"entity\": \"company\"\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"token\": \"251\",\n",
+    "                        \"start\": 41,\n",
+    "                        \"end\": 44,\n",
+    "                        \"entity\": \"rank\"\n",
+    "                    }\n",
+    "                ]\n",
+    "            },\n",
+    "            {\n",
+    "                \"text\": \"台積電在美國《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第251名\",\n",
+    "                \"labels\": [\n",
+    "                    {\n",
+    "                        \"token\": \"美國\",\n",
+    "                        \"start\": 4,\n",
+    "                        \"end\": 6,\n",
+    "                        \"entity\": \"country\"\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"token\": \"台積電\",\n",
+    "                        \"start\": 0,\n",
+    "                        \"end\": 3,\n",
+    "                        \"entity\": \"company\"\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"token\": \"251\",\n",
+    "                        \"start\": 41,\n",
+    "                        \"end\": 44,\n",
+    "                        \"entity\": \"rank\"\n",
+    "                    }\n",
+    "                ]\n",
+    "            }\n",
+    "        ]\n",
+    "    },\n",
+    "    \"tsmc2\": {\n",
+    "        \"examples\": [\n",
+    "            {\n",
+    "                \"text\": \"台積電在美國《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第251名\",\n",
+    "                \"labels\": [\n",
+    "                    {\n",
+    "                        \"token\": \"美國\",\n",
+    "                        \"start\": 4,\n",
+    "                        \"end\": 6,\n",
+    "                        \"entity\": \"country\"\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"token\": \"台積電\",\n",
+    "                        \"start\": 0,\n",
+    "                        \"end\": 3,\n",
+    "                        \"entity\": \"company\"\n",
+    "                    },\n",
+    "                    {\n",
+    "                        \"token\": \"251\",\n",
+    "                        \"start\": 41,\n",
+    "                        \"end\": 44,\n",
+    "                        \"entity\": \"rank\"\n",
+    "                    }\n",
+    "                ]\n",
+    "            }\n",
+    "        ],\n",
+    "        'use_entities': ['entity_1', 'entity_2']\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "entities = {\n",
+    "    \"test\": {\n",
+    "        \"roles\": [\n",
+    "            \"role_1\",\n",
+    "            \"role_2\"\n",
+    "        ]\n",
+    "    },\n",
+    "    \"company\": {\n",
+    "        \"roles\": [\n",
+    "            \"role_1\",\n",
+    "            \"role_2\"\n",
+    "        ],\n",
+    "        \"groups\": [\n",
+    "            \"group_1\",\n",
+    "            \"group_2\"\n",
+    "        ]},\n",
+    "    \"rank\": {\n",
+    "        \"groups\": [\n",
+    "            \"group_1\",\n",
+    "            \"group_2\"\n",
+    "        ]\n",
+    "    },\n",
+    "    \"country\": {}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{\"recipient_id\":\"test_user\",\"text\":\"Hey! How are you?\"}]\n"
+      "{'nlu': [{'intent': 'tsmc',\n",
+      "          'examples': [{'text': '[台積電]{\"entity\": \"company\"}在[美國]{\"entity\": '\n",
+      "                                '\"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": '\n",
+      "                                '\"rank\"}名\\n'},\n",
+      "                       {'text': '[台積電]{\"entity\": \"company\"}在[美國]{\"entity\": '\n",
+      "                                '\"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": '\n",
+      "                                '\"rank\"}名\\n'}]},\n",
+      "         {'intent': 'tsmc2',\n",
+      "          'examples': [{'text': '[台積電]{\"entity\": \"company\"}在[美國]{\"entity\": '\n",
+      "                                '\"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": '\n",
+      "                                '\"rank\"}名\\n'}]}]}\n",
+      "------------------------------------------------------------------------------------------------------------\n",
+      "nlu:\n",
+      "- intent: tsmc\n",
+      "  examples:\n",
+      "  - text: |\n",
+      "      [台積電]{\"entity\": \"company\"}在[美國]{\"entity\": \"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": \"rank\"}名\n",
+      "  - text: |\n",
+      "      [台積電]{\"entity\": \"company\"}在[美國]{\"entity\": \"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": \"rank\"}名\n",
+      "- intent: tsmc2\n",
+      "  examples:\n",
+      "  - text: |\n",
+      "      [台積電]{\"entity\": \"company\"}在[美國]{\"entity\": \"country\"}《財富》雜誌評選「全球最大500家公司」排行榜中，依營收規模名列全球第[251]{\"entity\": \"rank\"}名\n",
+      "------------------------------------------------------------------------------------------------------------\n",
+      "{'intents': ['tsmc', {'tsmc2': {'use_entities': ['entity_1', 'entity_2']}}],\n",
+      " 'entities': [{'test': {'roles': ['role_1', 'role_2']}},\n",
+      "              {'company': {'roles': ['role_1', 'role_2'],\n",
+      "                           'groups': ['group_1', 'group_2']}},\n",
+      "              {'rank': {'groups': ['group_1', 'group_2']}},\n",
+      "              'country']}\n",
+      "------------------------------------------------------------------------------------------------------------\n",
+      "intents:\n",
+      "- tsmc\n",
+      "- tsmc2:\n",
+      "    use_entities:\n",
+      "    - entity_1\n",
+      "    - entity_2\n",
+      "entities:\n",
+      "- test:\n",
+      "    roles:\n",
+      "    - role_1\n",
+      "    - role_2\n",
+      "- company:\n",
+      "    roles:\n",
+      "    - role_1\n",
+      "    - role_2\n",
+      "    groups:\n",
+      "    - group_1\n",
+      "    - group_2\n",
+      "- rank:\n",
+      "    groups:\n",
+      "    - group_1\n",
+      "    - group_2\n",
+      "- country\n"
      ]
     }
    ],
    "source": [
-    "import json\n",
+    "import sys\n",
+    "from ruamel.yaml import YAML\n",
+    "import pprint\n",
+    "from ruamel.yaml.scalarstring import LiteralScalarString\n",
     "\n",
-    "url = 'http://localhost:5005/webhooks/rest/webhook'\n",
-    "data = {'sender': 'test_user', 'message' : 'Hi!'}\n",
+    "nlu = {'nlu': []}\n",
+    "domain = {'intents': [], 'entities': []}\n",
+    "yaml=YAML()\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    response = requests.post(url, data = json.dumps(data))\n",
-    "    print(response.text)"
+    "# compile intents\n",
+    "for intent_name, intent in intents.items():\n",
+    "    # nlu\n",
+    "    examples_arr = []\n",
+    "    for example in intent['examples']:\n",
+    "        text = ''\n",
+    "        previous_end = 0\n",
+    "        sorted_labels = sorted(example['labels'], key=lambda d: d['start'])\n",
+    "        for label in sorted_labels:\n",
+    "            token = label.get('token')\n",
+    "            entity = label.get('entity')\n",
+    "            role = label.get('role')\n",
+    "            group = label.get('group')\n",
+    "            text += example['text'][previous_end:label['start']]\n",
+    "            text += f'[{token}]{{\"entity\": \"{entity}\"'\n",
+    "            text += f', \"role\": \"{role}\"' if role else ''\n",
+    "            text += f', \"group\": \"{group}\"' if group else ''\n",
+    "            text += f'}}'\n",
+    "            previous_end = label['end']\n",
+    "        text += example['text'][previous_end:]\n",
+    "        text += '\\n'\n",
+    "        examples_arr.append({'text': LiteralScalarString(text)})\n",
+    "    nlu['nlu'].append({'intent': intent_name, 'examples': examples_arr})\n",
+    "\n",
+    "    # domain\n",
+    "    intent.pop('examples')\n",
+    "    if intent:\n",
+    "        domain['intents'].append({intent_name: intent})\n",
+    "    else:\n",
+    "        domain['intents'].append(intent_name)\n",
+    "\n",
+    "# compile entities\n",
+    "for entity_name, entity in entities.items():\n",
+    "    if entity:\n",
+    "        domain['entities'].append({entity_name: entity})\n",
+    "    else:\n",
+    "        domain['entities'].append(entity_name)\n",
+    "\n",
+    "pprint.pprint(nlu, sort_dicts=False)\n",
+    "print('------------------------------------------------------------------------------------------------------------')\n",
+    "yaml.dump(nlu, sys.stdout)\n",
+    "print('------------------------------------------------------------------------------------------------------------')\n",
+    "pprint.pprint(domain, sort_dicts=False)\n",
+    "print('------------------------------------------------------------------------------------------------------------')\n",
+    "yaml.dump(domain, sys.stdout)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from typing import Any, Text, Dict, List\n",
+      "from rasa_sdk import Action, Tracker\n",
+      "from rasa_sdk.executor import CollectingDispatcher\n",
+      "\n",
+      "\n",
+      "class action_hello_world(Action):\n",
+      "\n",
+      "    def name(self) -> Text:\n",
+      "        return \"action_hello_world\"\n",
+      "\n",
+      "    def run(self, dispatcher: CollectingDispatcher,\n",
+      "            tracker: Tracker,\n",
+      "            domain: Dict[Text, Any]) -> List[Dict[Text, Any]]:\n",
+      "\n",
+      "        dispatcher.utter_message(text=\"Hello World!\")\n",
+      "\n",
+      "\n",
+      "class action_hello_world(Action):\n",
+      "\n",
+      "    def name(self) -> Text:\n",
+      "        return \"action_hello_world\"\n",
+      "\n",
+      "    def run(self, dispatcher: CollectingDispatcher,\n",
+      "            tracker: Tracker,\n",
+      "            domain: Dict[Text, Any]) -> List[Dict[Text, Any]]:\n",
+      "\n",
+      "        dispatcher.utter_message(text=\"Hello World!\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "action_name = 'action_hello_world'\n",
+    "action_code = 'dispatcher.utter_message(text=\"Hello World!\")'\n",
+    "\n",
+    "ACTION_PKG_SCHEMA = \"\"\"\\\n",
+    "from typing import Any, Text, Dict, List\n",
+    "from rasa_sdk import Action, Tracker\n",
+    "from rasa_sdk.executor import CollectingDispatcher\\\n",
+    "\"\"\"\n",
+    "ACTION_CLASS_SCHEMA = \"\"\"\\n\\n\\n\\\n",
+    "class {action_name}(Action):\n",
+    "\n",
+    "    def name(self) -> Text:\n",
+    "        return \"{action_name}\"\n",
+    "\n",
+    "    def run(self, dispatcher: CollectingDispatcher,\n",
+    "            tracker: Tracker,\n",
+    "            domain: Dict[Text, Any]) -> List[Dict[Text, Any]]:\n",
+    "\n",
+    "        {action_code}\\\n",
+    "\"\"\"\n",
+    "\n",
+    "action_py = ''\n",
+    "action_py += ACTION_PKG_SCHEMA\n",
+    "action_py += ACTION_CLASS_SCHEMA.format(action_name=action_name, action_code=action_code)\n",
+    "action_py += ACTION_CLASS_SCHEMA.format(action_name=action_name, action_code=action_code)\n",
+    "        \n",
+    "print(action_py)"
    ]
   }
  ],
